@@ -87,6 +87,8 @@
 
 - (BOOL)isDeletionAllowed;
 - (NSException *)trashInContext:(id)_ctx;
+- (NSException *) moveToFolderNamed: (NSString *) folderName
+                          inContext: (id)_ctx;
 
 @end
 
